2011-08-20 16:56  rsbivand

	* R/bin_link.R, R/vect_link.R, man/readVECT6.Rd: adding ... as
	  parameters= replacement in execGRASS

2011-08-20 16:38  rsbivand

	* NAMESPACE, R/AAA.R, R/bin_link.R, R/options.R, R/spgrass6.R,
	  R/vect_link.R, R/xml1.R, man/execGRASS.Rd, man/gmeta6.Rd,
	  man/readRAST6.Rd, man/readVECT6.Rd: adding ... as parameters=
	  replacement in execGRASS

2011-08-19 18:14  rsbivand

	* DESCRIPTION, NAMESPACE, R/AAA.R, R/bin_link.R, R/options.R,
	  R/xml1.R, man/execGRASS.Rd, man/readRAST6.Rd: starting adding
	  options and defaults

2011-08-17 09:34  rsbivand

	* DESCRIPTION, NAMESPACE, R/AAA.R, man/initGRASS.Rd: adding
	  NAMESPACE, onLoad()

2011-08-14 22:41  rsbivand

	* ChangeLog, inst/ChangeLog: GIS_LOCK manipulation

2011-08-14 22:40  rsbivand

	* R/AAA.R, R/initGRASS.R: GIS_LOCK manipulation

2011-08-14 22:02  rsbivand

	* ChangeLog, inst/ChangeLog: add NAMESPACE

2011-08-14 22:01  rsbivand

	* NAMESPACE: add NAMESPACE

2011-08-14 22:01  rsbivand

	* DESCRIPTION, R/AAA.R, R/initGRASS.R, R/zzz.R, man/readRAST6.Rd,
	  man/readVECT6.Rd: GIS_LOCK manipulation

2011-08-14 18:24  rsbivand

	* DESCRIPTION, R/initGRASS.R, man/initGRASS.Rd: GIS_LOCK
	  manipulation

2011-08-05 12:24  rsbivand

	* R/bin_link.R: flags in writeGRASS6

2011-06-22 08:39  rsbivand

	* R/vect_link.R: tidying vect.link in spgrass6

2011-06-10 22:03  rsbivand

	* DESCRIPTION, R/vect_link.R, man/readVECT6.Rd: sp comment buffer
	  overflow fix

2011-03-30 18:03  rsbivand

	* ChangeLog, inst/ChangeLog: fix vect2neigh

2011-03-30 18:01  rsbivand

	* DESCRIPTION, R/vect_link.R: fix vect2neigh

2011-03-13 15:34  rsbivand

	* inst/ChangeLog: row numbers not names for bb in initGRASS

2011-03-13 15:33  rsbivand

	* ChangeLog: row numbers not names for bb in initGRASS

2011-03-13 15:32  rsbivand

	* ChangeLog, DESCRIPTION, R/initGRASS.R: row numbers not names for
	  bb in initGRASS

2011-02-22 16:37  rsbivand

	* ChangeLog, inst/ChangeLog: tidy

2011-02-22 16:24  rsbivand
