@@ -1,3 +1,8 @@
+2011-08-20 16:57  rsbivand
+
+	* ChangeLog, inst/ChangeLog: adding ... as parameters= replacement
+	  in execGRASS
+
 2011-08-20 16:56  rsbivand
 
 	* R/bin_link.R, R/vect_link.R, man/readVECT6.Rd: adding ... as
